<resources>
    <string name="app_name">Gender Status</string>
    <string name="titleActivity">Activity</string>
    <string name="titleMood">Mood</string>
    <string name="titleAge">Age: %s</string>
    <string name="titleGender">Gender: %s</string>
    <string name="titleSus">Sus level: %s</string>
    <string name="avatar_alt">Avatar Image</string>
    <string name="empty">…</string>
    <string name="buttonSaveTitle">Save</string>
    <string name="buttonUpdateTitle">Edit own</string>
    <string name="title_app_settings">App Settings</string>
    <string name="background_title">Background:</string>
    <string name="save">Save</string>
    <string name="titleUpdateInt">Update interval (minutes): </string>
    <string name="select_color">App theme:</string>
    <string name="select_mode">Dark mode:</string>
    <string name="hintAvatar">Tap me! -></string>
    <string name="titleUpdated">Last updated: %s</string>
    <string name="buttonHistoryTitle">History</string>
    <string name="titleFontSize">Font size:</string>
    <string name="colors_preview_title">■ Preview ■</string>
    <string name="avatar_desc">Avatar image</string>
    <string name="background_desc">Background Image</string>
    <string name="friend_history_title">History</string>
    <string name="loader_animation">Loader Animation</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nickname">Nickname</string>
    <string name="add_friend_username">Friend\'s username</string>
    <string name="edit_nickname">Edit nickname</string>
    <string name="remove_friend">Remove friend</string>
    <string name="select">Select</string>
</resources>