<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernames_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_app_settings"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateInt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleUpdateInt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernames_title" />

    <TextView
        android:id="@+id/updateInt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/updateInt_title"
        app:layout_constraintStart_toEndOf="@+id/updateInt_title"
        app:layout_constraintTop_toTopOf="@+id/updateInt_title" />

    <SeekBar
        android:id="@+id/updateInt_bar"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="false"
        android:max="30"
        android:min="1"
        android:progress="3"
        android:progressBackgroundTintMode="screen"
        android:thumb="@android:drawable/btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/updateInt_title"
        app:layout_constraintTop_toBottomOf="@+id/updateInt_title" />

    <TextView
        android:id="@+id/fontsize_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/titleFontSize"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateInt_bar" />

    <TextView
        android:id="@+id/fontsize_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fontsize_title"
        app:layout_constraintStart_toEndOf="@+id/fontsize_title"
        app:layout_constraintTop_toTopOf="@+id/fontsize_title" />

    <SeekBar
        android:id="@+id/fontsize_bar"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="32dp"
        android:max="25"
        android:min="15"
        android:progress="20"
        android:progressBackgroundTintMode="screen"
        android:thumb="@android:drawable/btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fontsize_title" />

    <TextView
        android:id="@+id/background_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/button_background"
        android:text="@string/background_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/updateInt_title"
        app:layout_constraintTop_toBottomOf="@+id/fontsize_bar" />

    <Button
        android:id="@+id/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Select"
        app:layout_constraintBottom_toBottomOf="@+id/background_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/button_theme"
        android:text="@string/select_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background_title"
        app:layout_constraintTop_toBottomOf="@+id/background_title" />

    <Button
        android:id="@+id/button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="@+id/theme_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/theme_title" />

    <TextView
        android:id="@+id/mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/button_theme"
        android:text="@string/select_mode"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background_title"
        app:layout_constraintTop_toBottomOf="@id/theme_title" />

    <Button
        android:id="@+id/button_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="@id/mode_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mode_title" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>