<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/edit_label"
        app:layout_constraintEnd_toStartOf="@+id/button_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/empty"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/empty"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_edit"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonHistoryTitle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/button_remove"
        app:layout_constraintTop_toTopOf="@+id/info"
        app:srcCompat="@drawable/edit_48"
        app:tint="@color/foreground" />

    <TextView
        android:id="@+id/edit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_nickname"
        app:layout_constraintEnd_toEndOf="@+id/button_edit"
        app:layout_constraintStart_toStartOf="@+id/button_edit"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />

    <ImageButton
        android:id="@+id/button_remove"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonHistoryTitle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info"
        app:srcCompat="@drawable/remove_48"
        app:tint="@color/foreground" />

    <TextView
        android:id="@+id/remove_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/remove_friend"
        app:layout_constraintEnd_toEndOf="@+id/button_remove"
        app:layout_constraintStart_toStartOf="@+id/button_remove"
        app:layout_constraintTop_toBottomOf="@+id/button_remove" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>
